# almanac

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
almanac/: cli.py  demo.py  ingest.py  microcopy.py  stats.py  window.py
almanac/classifier/: __init__.py  cache.py  labels.py  preprocess.py  rules.py  zeroshot.py
almanac/renderer/: ansi.py  html.py  orchestrator.py  png.py  slide.py
almanac/slides/: __init__.py  _util.py  authors.py  cadence.py  cover.py  languages.py  numbers.py  top_files.py  verbs.py
almanac/templates/: almanac.css  almanac.html  almanac.js  card.html
docs/: architecture.md  classifier.md  rendering.md
scripts/: eval_classifier.py
scripts/probes/: probe_zeroshot.py
tests/: test_ansi.py  test_author_aggregation.py  test_classifier_auto.py  test_classifier_batch.py  test_classifier_cache.py  test_classifier_cli.py  test_classifier_coverage.py  test_classifier_dep_patterns.py  test_classifier_first_verb_rules.py  test_classifier_preprocess.py  test_classifier_rules.py  test_classifier_zeroshot_integration.py  test_classifier_zeroshot_stub.py  test_demo.py  test_demo_cli.py  test_files_subjects.py  test_html_cli.py  test_html_renderer.py  test_ingest_parser.py  test_microcopy.py  test_orchestrator.py  test_png_card.py  test_slides.py  test_smoke_self.py  test_stats_highlights.py  test_stats_verbs_vocab.py  test_window.py
tests/fixtures/: commit_subjects_sample.txt
