[project]
name = "almanac"
version = "0.1.0"
description = "Spotify Wrapped for your codebase"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.2",
    "transformers>=4.40",
    "sentencepiece>=0.2",
]
png = [
    "playwright>=1.40",
]

[project.scripts]
almanac = "almanac.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
